# DDoS-Detection-and-Mitigation-with-ML-Models

./: .gitignore  README.md  c_cpp_properties.json  main.py  requirements.txt  run_enhanced_project.sh  run_project.sh  run_visualization.py
analysis/: performance_metrics.py  performance_visualization.py
config/: experiment.yaml  ml-config.yaml
data/live/: blacklist.txt  live_flow_stats.csv
data/raw/: ns3_detailed_results.csv  ns3_detailed_results_10_nodes.csv  ns3_detailed_results_20_nodes.csv  ns3_detailed_results_30_nodes.csv  ns3_detailed_results_40_nodes.csv  ns3_detailed_results_50_nodes.csv  realtime_stats.csv  realtime_stats_10_nodes.csv  realtime_stats_20_nodes.csv  realtime_stats_30_nodes.csv  realtime_stats_40_nodes.csv  realtime_stats_50_nodes.csv
mitigation/: mitigator.py
ml-pipeline/: advanced_evaluation.py  data_processor.py  ddos_detector.py  feature_extractor.py  main.py  model_evaluation.py  optimization.py  train_model.py
ml-pipeline/analyzers/: performance_analyzer.py
ml-pipeline/evaluators/: result_visualizer.py
ml-pipeline/models/: cnn_model.py  decision_tree_model.py
ml-pipeline/results/: selected_features_mask.npy
ml-pipeline/utils/: config_loader.py  logger.py
ns3-simulations/: CMakeLists.txt  wscript
ns3-simulations/config/: simulation-config.yaml
ns3-simulations/src/: animation.cc  ddos-simulator.cc
report/: report.aux  report.fdb_latexmk  report.fls  report.lof  report.lot  report.out  report.tex  report.toc
results/: final_results.json
scripts/: run_ns3_simulation.sh  run_optimization_evaluation.sh
